--- a/contactar.html
+++ b/contactar.html
@@ -53,38 +53,45 @@
                 <h4 class="izquierda__titulo">COMENTARIO ></h4>
             </section>
             <section class="derecha">
-                <form action="">
+                <form>
                     <ul>
                         <li>
                             <!-- nombre -->
                             <label for="nombre">Nombre *</label>
                             <input
+                                name="nombre"
                                 type="text"
+                                id=""
                                 required
                                 placeholder="introduce tu nombre"
-                                name="nombre"
-                                id=""
-                            />
-                        </li>
-                        <li>
-                            <!-- apellidos -->
-                            <label for="apellidos">Apellidos</label>
-                            <input
-                                type="text"
-                                placeholder="introduce tus apellidos"
+                                autofocus
+                                maxlength="20"
+                                pattern="[A-Za-z]{2,20}"
+                                />
+                            </li>
+                            <li>
+                                <!-- apellidos -->
+                                <label for="apellidos">Apellidos</label>
+                                <input
+                                class="apellidos" 
                                 name="apellidos"
+                                type="text"
                                 id=""
+                                placeholder="introduce tus apellidos"
+                                maxlength="25"
+                                pattern="[A-Za-z]{2,25}"
                             />
                         </li>
                         <li>
                             <!-- email -->
                             <label for="mail">Correo electrónico *</label>
                             <input
+                                name="mail"
                                 type="email"
+                                id=""
                                 required
                                 placeholder="introduce tu email"
-                                name="mail"
-                                id=""
+                                pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+.[a-zA-Z]{2,6}"
                             />
                         </li>
                         <li>
@@ -92,9 +99,9 @@
                             <label for="comentario">Comentario *</label>
                             <textarea
                                 name="comentario"
+                                id=""
                                 required
                                 placeholder="tu vida es tan triste para escribir aqui"
-                                id=""
                                 cols="30"
                                 rows="10"
                             ></textarea>
@@ -102,14 +109,12 @@
                         <li>
                             <!-- Check para publicidad -->
                             <input
-                                type="checkbox"
-                                checked
                                 name="privacidad"
+                                type="checkbox"
                                 id=""
+                                checked
                             />
-                            <p>
-                                Utilizar mi email para enviarme publicidad
-                            </p>
+                            <p>Utilizar mi email para enviarme publicidad</p>
                         </li>
                         <li>
                             <!-- Botones del formulario -->
